--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,20 @@
 body{
-    color: rgb(94, 92, 230);
+    color: rgb(80, 80, 80);
+    text-align: left;
+    font-family: 'Helvetica';
+    
+}
+#container
+{
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    font-size: 30px;
+    border: 3px solid #ddd;
+    margin: 0 auto;
+}
+#container h1
+{
     text-align: center;
-    font-family: 'Arial';
+    font-size: 40px;
 }
