--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,20 +1,20 @@
 body{
     color: rgb(80, 80, 80);
-    text-align: left;
-    font-family: 'Helvetica';
-    
+    text-align: center;
+    font-family: Arial;
+    font-size: 18px;
+    margin: 0;
+    padding: 0;
 }
 #container
 {
-    width: 70%;
+    width: 50%;
     padding: 1em;
+    border: 1px solid #ddd;
     text-align: left;
-    font-size: 30px;
-    border: 3px solid #ddd;
     margin: 0 auto;
 }
 #container h1
 {
-    text-align: center;
-    font-size: 40px;
+    text-align: left;
 }
