--- a/css/estilos.css
+++ b/css/estilos.css
@@ -6,10 +6,27 @@ body{
     margin: 0;
     padding: 0;
 }
-#container
+#cabecera
 {
-    width: 50%;
-    padding: 1em;
+    background-color: #5d5ddf;
+    color: rgb(255, 255, 255);
+    box-shadow: 1px 1px 53px -1px rgba(0,0,0,0.75);
+    box-shadow: inset 1px 1px 53px -1px rgba(0,0,0,0.53);
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5cm;
+    text-align: left;
+}
+#cabecera #tagline
+{
+    padding:  0 0 0 1em;
+    font-weight: normal;
+    font-size: 0.8em;
+}
+#container 
+{
+    width: 70%;
+    padding: 0em;
     border: 1px solid #ddd;
     text-align: left;
     margin: 0 auto;
@@ -17,4 +34,12 @@ body{
 #container h1
 {
     text-align: left;
+    padding: .5cm;
+    padding-bottom: .2;
+}
+#container p
+{
+    font-size: 20;
+    padding: 1em;
+    padding-top: 0;
 }
