--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,7 @@
 body{
     color: rgb(80, 80, 80);
     text-align: left;
-    font-family: 'Helvetica';
+    font-family: courier;
     
 }
 #container
