--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,25 +1,26 @@
 body{
     color: rgb(58, 58, 63);
     text-align: left;
-    font-family: Helvetica;
+    font-family: Arial, Helvetica, sans-serif;
+
     
 }
 #cabecera
 {
-    background-color: #5d5ddf;
     color: rgb(255, 255, 255);
-    box-shadow: 1px 1px 53px -1px rgba(0,0,0,0.75);
-    box-shadow: inset 1px 1px 53px -1px rgba(0,0,0,0.53);
+    background: linear-gradient(to left, #4a9bf7, #1956ff);
     font-weight: bold;
+    font-size: x-large;
     margin: 0;
-    padding: 0.5cm;
+    padding: 30px;
     text-align: left;
 }
 #cabecera #tagline
 {
+    color: rgb(255, 255, 255);
     padding:  0 0 0 1em;
     font-weight: normal;
-    font-size: 0.8em;
+    font-size: 0.5em;
 }
 #container 
 {
