--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,6 @@
 body{
-    color: rgb(58, 58, 63);
+    background-color: rgb(46, 45, 45);
+    color: rgb(255, 255, 255);
     text-align: left;
     font-family: Arial, Helvetica, sans-serif;
 
@@ -24,6 +25,8 @@ body{
 }
 #container 
 {
+    color: rgb(71, 71, 71);
+    background-color: white;
     width: 70%;
     padding: 0em;
     border: 1px solid #ddd;
